// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Remove /> > should render when [show=false] 1`] = `
<RemoveModal
  name="Foo"
  noun="OTU"
  onConfirm={[Function]}
  onHide={[MockFunction spy]}
  show={false}
/>
`;

exports[`<Remove /> > should render when [show=true] 1`] = `
<RemoveModal
  name="Foo"
  noun="OTU"
  onConfirm={[Function]}
  onHide={[MockFunction spy]}
  show={true}
/>
`;
